--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "core-js": "^3.6.5",
+        "particles.js": "^2.0.0",
         "uikit": "^3.6.19",
         "vue": "^3.0.0"
     },
