--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "core-js": "^3.6.5",
         "particles.js": "^2.0.0",
         "uikit": "^3.6.19",
-        "vue": "^3.0.0"
+        "vue": "^3.0.0",
+        "vue-router": "^4.0.8",
+        "vue3-progress": "*"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "~4.5.0",
@@ -36,7 +38,16 @@
         "parserOptions": {
             "parser": "babel-eslint"
         },
-        "rules": {}
+        "rules": {
+            "no-unused-vars": [
+                "error",
+                {
+                    "vars": "all",
+                    "args": "none",
+                    "ignoreRestSiblings": false
+                }
+            ]
+        }
     },
     "browserslist": [
         "> 1%",
